# chatbot-gemini

./: README.md  pyproject.toml  requirements.txt
src/chatbot_gemini/: chatbot.py  main.py  streamlit_app.py
