[project]
name = "chatbot-gemini"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ojizou003", email = "sinissi@gmail.com" }
]
dependencies = [
    "google-generativeai>=0.8.4",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot_gemini"]

[tool.rye.scripts]
web = "streamlit run src/chatbot_gemini/streamlit_app.py"
